--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "CBC",
-  "version": "0.0.1",
-  "description": "",
-  "private": true,
-  "devDependencies": {
-    "@sap/grunt-sapui5-bestpractice-build": "1.4.2"
-  }
+    "name": "grunt-build",
+    "version": "0.0.1",
+    "description": "Grunt build",
+    "private": true,
+    "devDependencies": {
+        "grunt-stripcomments": "0.7.2",
+        "grunt-remove-logging-calls": "0.1.2",
+        "grunt-postcss": "0.9.0",
+        "autoprefixer": "7.2.4",
+        "grunt-contrib-less": "1.4.1",
+        "grunt-contrib-cssmin": "2.2.1",
+        "@sap/grunt-sapui5-bestpractice-build": "1.3.33"
+    }
 }
