--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -105,17 +105,18 @@
 					"pattern": "rtChFromuladora/{oRowPath}",
 					"target": "rtChFromuladoraTarget"
 				},
-				
 				"rtChMateriales": {
 					"pattern": "rtChMateriales",
 					"target": "rtChMaterialesTarget"
 				},
-				
 				"rtChMantenimientoCommodities": {
 					"pattern": "rtChMantenimientoCommodities",
 					"target": "rtChMantenimientoCommoditiesTarget"
+				},
+				"rtChCostosLogisticos": {
+					"pattern": "rtChCostosLogisticos",
+					"target": "rtChCostosLogisticosTarget"
 				}
-				
 			},
 			"targets": {
 				"parentTarget": {
@@ -161,6 +162,15 @@
 				"rtChMantenimientoCommoditiesTarget": {
 					"viewPath": "cbc.co.simulador_costos.view.Commodities",
 					"viewName": "Commodities",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide",
+					"controlAggregation": "pages",
+					"viewLevel": 3
+				},
+				"rtChCostosLogisticosTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.DataDefault.LogisticCost",
+					"viewName": "AdminLogisticCost",
 					"parent": "parentTarget",
 					"controlId": "parentNavContainer",
 					"transition": "slide",
