Se agrega pantalla de perfiles al manifest

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -120,6 +120,10 @@
 				"rtChCostosLogisticos": {
 					"pattern": "rtChCostosLogisticos",
 					"target": "rtChCostosLogisticosTarget"
+				},
+				"rtChUsers": {
+					"pattern": "rtChUsers",
+					"target": "rtChUsersTarget"
 				}
 			},
 			"targets": {
@@ -184,6 +188,15 @@
 				"rtChCostosLogisticosTarget": {
 					"viewPath": "cbc.co.simulador_costos.view.DataDefault.LogisticCost",
 					"viewName": "AdminLogisticCost",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide",
+					"controlAggregation": "pages",
+					"viewLevel": 3
+				},
+				"rtChUsersTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Admon",
+					"viewName": "Users",
 					"parent": "parentTarget",
 					"controlId": "parentNavContainer",
 					"transition": "slide",
