--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -213,5 +213,9 @@
 	"sap.platform.abap": {
 		"uri": "/sap/bc/ui5_ui5/sap/zsimulador_001/webapp",
 		"_version": "1.1.0"
+	},
+	"sap.platform.hcp": {
+		"uri": "webapp",
+		"_version": "1.1.0"
 	}
 }
