Update  navegacion en manifest

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -134,11 +134,63 @@
 				},
 				"rtChUsers": {
 					"pattern": "rtChUsers",
-					"target": "rtChUsersTarget"
+					"target": "rtHomeTarget"
 				},
-				"rtChAdminCL": {
-					"pattern": "rtChAdminCL",
-					"target": "rtChAdminCLTarget"
+				"rtChCentros": {
+					"pattern": "rtChCentros",
+					"target": "rtHomeTarget"
+				},
+				"rtChUndMedida": {
+					"pattern": "rtChUndMedida",
+					"target": "rtHomeTarget"
+				},
+				"rtChPeriodo": {
+					"pattern": "rtChPeriodo",
+					"target": "rtHomeTarget"
+				},
+				"rtChAdminLogistica": {
+					"pattern": "rtChAdminLogistica",
+					"target": "rtHomeTarget"
+				},
+				"rtChTypeChange": {
+					"pattern": "rtChTypeChange",
+					"target": "rtChTypeChangeTarget"
+				},
+				"rtChCreateIcoterm": {
+					"pattern": "rtChCreateIcoterm",
+					"target": "rtChCreateIcotermTarget"
+				},
+				"rtChCopyVersion": {
+					"pattern": "rtChCopyVersion",
+					"target": "rtHomeTarget"
+				},
+				"rtChMatrizEs": {
+					"pattern": "rtChMatrizEs",
+					"target": "rtHomeTarget"
+				},
+				"rtChAdmonEs": {
+					"pattern": "rtChAdmonEs",
+					"target": "rtHomeTarget"
+				},
+				"rtChMantenimientoMateriales": {
+					"pattern": "rtChMantenimientoMateriales",
+					"target": "rtChMantenimientoMaterialesTarget"
+				},
+				"rtChMantenimientoCostLog": {
+					"pattern": "rtChMantenimientoCostLog",
+					"target": "rtChMantenimientoCostLogTarget"
+				},
+				"rtCCOGS": {
+					"pattern": "rtCCOGS",
+					"target": "rtHomeTarget"
+				},
+				"rtChVisualizacion": {
+					"pattern": "rtChVisualizacion",
+					"target": "rtHomeTarget"
+				},
+				"rtChVolumen": {
+					"pattern": "rtChVolumen",
+					"target": "rtHomeTarget"
 				}
 			},
 			"targets": {
@@ -211,14 +263,103 @@
 					"controlId": "parentNavContainer",
 					"transition": "slide"
 				},
-				"rtChAdminCLTarget": {
-					"viewPath": "cbc.co.simulador_costos.view.DataDefault.LogisticCost",
-					"viewName": "AdminIDLogisticCost",
+				"rtChCentrosTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Admon",
+					"viewName": "Centros",
 					"parent": "parentTarget",
 					"controlId": "parentNavContainer",
-					"transition": "slide",
-					"controlAggregation": "pages",
-					"viewLevel": 3
+					"transition": "slide"
+				},
+				"rtChUndMedidaTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Admon",
+					"viewName": "CreateParameters",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChPeriodoTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Admon",
+					"viewName": "CreateParameters",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChAdminLogisticaTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Admon",
+					"viewName": "CreateParameters",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChTypeChangeTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.DataDefault.TypeChange",
+					"viewName": "AdminTypeChange",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChCreateIcotermTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.DataDefault.Icoterm",
+					"viewName": "AdminIcoterm",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChCopyVersionTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.DataDefault.Version",
+					"viewName": "AdminVersion",
+				"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChMatrizEsTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Escenarios",
+					"viewName": "MatrizEsc",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChAdmonEsTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Escenarios",
+					"viewName": "AdmonEsc",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChMantenimientoMaterialesTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Materiales",
+					"viewName": "AdmonMateriales",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChMantenimientoCostLogTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.LogisticCost",
+					"viewName": "AdmonLogisticCost",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtCCOGSTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.COGS",
+					"viewName": "COGS",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChVisualizacionTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Reportes",
+					"viewName": "Reportes",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChrtChVolumenTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.COGS",
+					"viewName": "COGS",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
 				},
 				"notFound": {
 					"viewName": "Parent",
