--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -16,14 +16,6 @@
 				"settings": {
 					"localUri": "localService/metadata.xml"
 				}
-			},
-			"Northwind": {
-				"uri": "/Northwind/V2/Northwind/Northwind.svc/",
-				"type": "OData",
-				"settings": {
-					"odataVersion": "2.0",
-					"localUri": "localService/metadata.xml"
-				}
 			}
 		},
 		"sourceTemplate": {
@@ -83,14 +75,16 @@
 				"dataSource": "Z_SIMULADOR_SRV",
 				"preload": true
 			},
-			"Northwind": {
-				"dataSource": "Northwind",
-				"preload": true
-			},
 			"ImgHome": {
 				"type": "sap.ui.model.json.JSONModel",
 				"settings": {},
 				"uri": "model/img.json",
+				"preload": true
+			},
+			"Escenarios": {
+				"type": "sap.ui.model.json.JSONModel",
+				"settings": {},
+				"uri": "model/Escenarios/MatrizEscenarios.json",
 				"preload": true
 			}
 		},
@@ -175,8 +169,12 @@
 					"target": "rtHomeTarget"
 				},
 				"rtChMatrizEs": {
-					"pattern": "rtChMatrizEs",
-					"target": "rtHomeTarget"
+					"pattern": "MatrizEscenarios",
+					"target": "rtChMatrizEsTarget"
+				},
+				"rtChMatrizEsNew": {
+					"pattern": "MatrizEscenarios/Nuevo",
+					"target": "rtChMatrizEsNewTarget"	
 				},
 				"rtChAdmonEs": {
 					"pattern": "rtChAdmonEs",
@@ -338,6 +336,13 @@
 				"rtChMatrizEsTarget": {
 					"viewPath": "cbc.co.simulador_costos.view.Escenarios",
 					"viewName": "MatrizEsc",
+					"parent": "parentTarget",
+					"controlId": "parentNavContainer",
+					"transition": "slide"
+				},
+				"rtChMatrizEsNewTarget": {
+					"viewPath": "cbc.co.simulador_costos.view.Escenarios.MatrizEsc",
+					"viewName": "AddEsc",
 					"parent": "parentTarget",
 					"controlId": "parentNavContainer",
 					"transition": "slide"
