--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -133,7 +133,7 @@
 					"target": "rtChCommoditiesTarget"
 				},
 				"rtChFromuladora": {
-					"pattern": "rtChFromuladora/{oRowPath}/oIdFormula{oIdFormula}/oTxt{oTxt}/oYear{oYear}/oMes{oMes}",
+					"pattern": "rtChFromuladora/{oIdCommoditie}/oSociedad{oSociedad}/oCentro{oCentro}/oYear{oYear}/oMes{oMes}/oIdFormula{oIdFormula}/oTxt{oTxt}",
 					"target": "rtChFromuladoraTarget"
 				},
 				"rtChIDCommodities": {
