update modulo volumen

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -210,7 +210,7 @@
 				},
 				"rtChVolumen": {
 					"pattern": "rtChVolumen",
-					"target": "rtHomeTarget"
+					"target": "rtChVolumenTarget"
 				},
 				"rtChAdminCL": {
 					"pattern": "rtChAdminCL",
